--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ color:green;
 font-size:30px;
 border:solid 3px lightgreen;
 }
+footer{
+border:solid 3px lightgreen;
+}
 h1{
 
 }
@@ -40,7 +43,7 @@ td{
 
 }
 section{
-border:solid 3px beige;
+border:solid 3px brown;
 }
 img{
 
