--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ footer{
 border:solid 3px lightgreen;
 width:960px;
 margin-right:auto;
-margin-reft:auto;
+margin-left:auto;
 }
 h1{
 
@@ -52,7 +52,7 @@ section{
 border:solid 3px brown;
 width:960px;
 margin-right:auto;
-margin-reft:auto;
+margin-left:auto;
 }
 img{
 
