--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ header{
 color:green;
 font-size:30px;
 border:solid 3px lightgreen;
+display: block;
 width:960px;
 margin-right:auto;
 margin-reft:auto;
 }
 footer{
 border:solid 3px lightgreen;
+display: block;
 width:960px;
 margin-right:auto;
 margin-left:auto;
@@ -50,6 +52,7 @@ td{
 }
 section{
 border:solid 3px brown;
+display: block;
 width:960px;
 margin-right:auto;
 margin-left:auto;
