--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ border: solid 3px lightgreen;
 width: 960px;
   margin-right:auto;
   margin-left:auto;
+text-aligen:center;
 }
 h1{
 
@@ -50,6 +51,7 @@ display: block;
 width:960px;
   margin-right:auto;
   margin-left:auto;
+text-aligen:center;
 }
 img{
 
