--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ border: solid 3px lightgreen;
 width: 960px;
   margin-right:auto;
   margin-left:auto;
-text-aligen:center;
+text-align:center;
 }
 h1{
 
@@ -51,7 +51,7 @@ display: block;
 width:960px;
   margin-right:auto;
   margin-left:auto;
-text-aligen:center;
+text-align:center;
 }
 img{
 
