--- a/style.css
+++ b/style.css
@@ -16,10 +16,14 @@ h2{
 
 }
 ul{
-
+border:solid 3px brown;
+display: block;
+width:960px;
+  margin-right:auto;
+  margin-left:auto;
 }
 li{
-list-style:disc;
+list-style:circle;
 list-style-position: inside;
 }
 dl{
