--- a/style.css
+++ b/style.css
@@ -21,11 +21,12 @@ ul{
 li{
 list-style:circle;
 list-style-position: inside;
-display:block;
-border:solid 3px brown;
-width:960px;
-  margin-right:auto;
-  margin-left:auto;
+  border: solid 3px brown;
+  display: block;
+  width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
 }
 dl{
 
