--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ list-style-position: inside;
 section{
 border:solid 3px brown;
 width:960px;
+height:640px;
   margin-right:auto;
   margin-left:auto;
 text-align:center;
