--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ color:green;
 font-size:30px;
 height:120px;
 padding-bottom:20px;
+  box-sizing: border-box;
 }
 header, footer {
 border: solid 3px lightgreen;
