--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ padding-bottom:20px;
 header, footer {
 border: solid 3px lightgreen;
 width: 90%;
-max-width: 400px;
+max-width: 420px;
   margin-right:auto;
   margin-left:auto;
 text-align:center;
@@ -18,7 +18,8 @@ list-style-position: inside;
 }
 section{
 border:solid 3px brown;
-width:400px;
+width: 90%;
+max-width: 420px;
 height:520px;
   margin-right:auto;
   margin-left:auto;
