--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ color:green;
 font-size:60px;
 }
 header, footer {
-border: solid 3px green;
-background-color:lightgreen;
+border: solid 3px lightgreen;
+background-color:beige;
 width: 90%;
 max-width: 420px;
   margin-right:auto;
@@ -17,7 +17,7 @@ list-style-position: inside;
 }
 section{
 border:solid 3px brown;
-background-color:lightbrown;
+background-color:beige;
 width: 90%;
 max-width: 420px;
   margin-right:auto;
