--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ color:green;
 font-size:60px;
 }
 header, footer {
-border: solid 3px lightgreen;
+border: solid 3px green;
 background-color:beige;
 width: 90%;
 max-width: 420px;
