--- a/style.css
+++ b/style.css
@@ -26,7 +26,10 @@ text-align:center;
 }
 table{
 border-collapse:collapse;
+margin-right:auto;
+margin-left:auto;
+text-align:center;
 }
 td{
-border:solid 1px  
+border:solid 1px
 }
