--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ border-collapse:collapse;
 margin-right:auto;
 margin-left:auto;
 text-align:center;
+margin-bottom: 40px;
 }
 td{
 border:solid 3px
